# Tomasulo-Simulator

./: .gitignore  CMakeLists.txt
doc/report/: REPORT.aux  REPORT.tex
include/: Inst.hpp  Reg.hpp  Station.hpp  Tomasulo.hpp  Unit.hpp  Util.hpp
src/: Inst.cpp  Reg.cpp  Simulator.cpp  Station.cpp  Tomasulo.cpp  Unit.cpp  Util.cpp
testcase/: 0.basic.nel  0.basic.web.nel  1.basic.nel  2.basic.nel  3.basic.nel  4.basic.nel  Example.nel  Fabo.nel  Fact.nel  Gcd.nel  Jump.nel  Mul.nel
