CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(Tomasulo)

SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/include/tabulate)

AUX_SOURCE_DIRECTORY(src SIM_SOURCES)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

FILE(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/log)

ADD_EXECUTABLE(${PROJECT_NAME} ${SIM_SOURCES})
